# Voxel-GameEngine

./: .gitignore  CMakeLists.txt  FORLATER.md  README.md  floatsToRGB.h  main.cpp
Libraries/include/glad/: glad.h
Libraries/include/json/: json.h
Libraries/lib/: glfw3.lib
Libraries/source/glad-ogl-core/include/glad/: glad.h
Libraries/source/glad-ogl-core/src/: glad.c
Libraries/source/imgui/: .gitignore  CMakeImplFiles.cmake  CMakeLists.txt  CMakeOptions.cmake
assets/mdls/nuke/: scene.gltf
docs/: index.html
docs/assets/imp/: index.js  style.css
src/: main.cpp
src/App/CustomMessageBox/: CustomMessageBox.cpp  CustomMessageBox.h
src/App/GUI/: GUI.cpp  GUI.h
src/GameEngine/CameraClass/: Camera.cpp  Camera.h
src/GameEngine/ImGuiHelper/: ImGuiHelper.cpp  ImGuiHelper.h
src/GameEngine/MeshClass/: Mesh.cpp  Mesh.h
src/GameEngine/ModelClass/: Model.cpp  Model.h
src/GameEngine/Shaders/: ShaderClass.cpp  ShaderClass.h
src/GameEngine/Shaders/Organizing/EBO/: EBO.cpp  EBO.h
src/GameEngine/Shaders/Organizing/VAO/: VAO.cpp  VAO.h
src/GameEngine/Shaders/Organizing/VBO/: VBO.cpp  VBO.h
src/GameEngine/Shaders/Source/: FragmentShader.glsl  LightFragmentShader.glsl  LightVertexShader.glsl  OutLiningFragmentShader.glsl  OutLiningVertexShader.glsl  VertexShader.glsl
src/GameEngine/TextureClass/: Texture.cpp  Texture.h
src/pub/Shaders/: ShaderClass.cpp  ShaderClass.h
src/pub/Shaders/Organizing/VAO/: VAO.cpp  VAO.h
src/pub/Shaders/Organizing/VBO/: VBO.cpp  VBO.h
src/pub/Shaders/Source/: FragmentShader.glsl
src/pub/Utilities/Classes/: BoxLogger.cpp  deltaTime.cpp  floatsToRGB.cpp
src/pub/Utilities/Headers/: BoxLogger.h  deltaTime.h
